--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/logging": "^11.0.0",
+    "@google-cloud/monitoring": "^4.1.0",
+    "@google-cloud/trace-agent": "^8.0.0",
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "path": "^0.12.7"
