--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/bigquery": "^7.7.1",
     "@google-cloud/logging": "^11.0.0",
     "@google-cloud/monitoring": "^4.1.0",
     "@google-cloud/trace-agent": "^8.0.0",
