added google oauth backend

--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
     "@google-cloud/monitoring": "^4.1.0",
     "@google-cloud/trace-agent": "^8.0.0",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "mongod": "^2.0.0",
+    "mongoose": "^8.4.1",
     "nodemon": "^3.1.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
