--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@google-cloud/bigquery": "^7.7.1",
+    "@google-cloud/functions": "^3.4.0",
     "@google-cloud/logging": "^11.0.0",
     "@google-cloud/monitoring": "^4.1.0",
     "@google-cloud/storage": "^7.11.2",
