--- a/package.json
+++ b/package.json
@@ -14,15 +14,23 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@google-cloud/bigquery": "^7.7.1",
+    "@google-cloud/functions": "^3.4.0",
     "@google-cloud/logging": "^11.0.0",
     "@google-cloud/monitoring": "^4.1.0",
+    "@google-cloud/storage": "^7.11.2",
     "@google-cloud/trace-agent": "^8.0.0",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "mongod": "^2.0.0",
+    "mongoose": "^8.4.1",
     "nodemon": "^3.1.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
