--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "file-loader": "^6.2.0",
     "mongod": "^2.0.0",
     "mongoose": "^8.4.1",
     "nodemon": "^3.1.2",
