--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@google-cloud/trace-agent": "^8.0.0",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
+    "@reduxjs/toolkit": "^2.2.7",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
@@ -37,6 +38,7 @@
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0"
   },
